adding Will Von Geldern

--- a/about.html
+++ b/about.html
@@ -360,6 +360,20 @@
             </div>
           </div><!-- End Team Member -->
 
+                    <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="600">
+            <div class="member-img">
+              <img src="assets/img/team/willvongeldern.jpeg" class="img-fluid" alt="">
+              <div class="social">
+                <a href="https://www.linkedin.com/in/willvongeldern/"><i class="bi bi-linkedin"></i></a>
+              </div>
+            </div>
+            <div class="member-info text-center">
+              <h4>Will von Geldern</h4>
+              <span>Research Affiliate</span>
+              <p> </p>
+            </div>
+          </div><!-- End Team Member -->
+
 
         </div>
 
