--- a/about.html
+++ b/about.html
@@ -362,7 +362,7 @@
 
                     <div class="col-lg-4 col-md-6 member" data-aos="fade-up" data-aos-delay="600">
             <div class="member-img">
-              <img src="assets/img/team/willvongeldern.jpeg" class="img-fluid" alt="">
+              <img src="assets/img/team/willvongeldern.jpeg" class="img-fluid" alt=""> <!-- Image not working -->
               <div class="social">
                 <a href="https://www.linkedin.com/in/willvongeldern/"><i class="bi bi-linkedin"></i></a>
               </div>
